--- a/package.json
+++ b/package.json
@@ -6,21 +6,42 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7"
+    "react-native-dotenv": "^3.3.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.69.1",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.1.2",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "^0.69.14",
+    "@types/react-test-renderer": "^18.0.0",
+    "jest": "^29.2.0",
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.0.3",
     "typescript": "~4.3.5"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "private": true
 }
